--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
     "web-vitals": "^1.1.0"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
+    "start": "npm run watch:css && react-scripts start",
+    "build": "npm run build:css && react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "build:css": "postcss src/Assets/tailwind.css -o src/Assets/main.css",
+    "watch:css": "postcss src/Assets/tailwind.css -o src/Assets/main.css"
   },
   "eslintConfig": {
     "extends": [
@@ -34,5 +36,13 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "autoprefixer": "^9.8.6",
+    "postcss": "^8.2.6",
+    "postcss-cli": "^8.3.1",
+    "tailwind": "^4.0.0",
+    "tailwindcss": "^2.0.3",
+    "typescript": "^4.1.5"
   }
 }
